--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_weight="9"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:layout_weight="9"
+        android:adjustViewBounds="false"
+        android:contentDescription="Image display."
+        android:cropToPadding="false"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/categoryTextView"
